# exam

./: CMakeLists.txt  Dockerfile  Jenkinsfile
app/: main.cpp
app/src/: what_a_day.cpp  what_a_day.h
test/: a.out  error_test.cpp  simple_test.cpp
